# django-components-lite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SOURCE_DELETION_LIST.md  STREAMLINING_PLAN.md  STREAMLINING_PROGRESS.md  TEST_DELETION_LIST.md  TEST_RESULTS.md  asv.conf.json  convert_inline_templates.py  mkdocs.yml  pyproject.toml  requirements-ci-python38.txt  requirements-ci.in  requirements-ci.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt  tox.ini  versions.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml  discussion-discord.yml  docs.yml  issue-discord.yml  maint-docs-people.yml  maint-supported-versions.yml  pr-benchmark-generate.yml  pr-discord.yml  publish.yml  release-discord.yml  release-docs.yml  release-pypi.yml  tag.yml  tests.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/getting-started/installation/: index.html
0.1.0/getting-started/quickstart/: index.html
0.1.0/reference/api/: index.html
0.1.0/reference/changelog/: index.html
0.1.0/search/: search_index.json
0.1.0/user-guide/components/: index.html
0.1.0/user-guide/settings/: index.html
0.1.0/user-guide/slots/: index.html
0.1.0a1/: 404.html  index.html  sitemap.xml
0.1.0a1/getting-started/installation/: index.html
0.1.0a1/getting-started/quickstart/: index.html
0.1.0a1/reference/api/: index.html
0.1.0a1/reference/changelog/: index.html
0.1.0a1/user-guide/components/: index.html
0.1.0a1/user-guide/settings/: index.html
0.1.0a1/user-guide/slots/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/getting-started/installation/: index.html
0.2.0/getting-started/quickstart/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  sitemap.xml
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/search/: search_index.json
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/search/: search_index.json
0.5.1/: 404.html  index.html  sitemap.xml
benchmarks/: README.md  _common.py  benchmark_templating.py  data.py  profile_backend.py  run.py  utils.py
benchmarks/djc/: bench.py
benchmarks/djc_lite/: bench.py
benchmarks/include/: bench.py
benchmarks/inclusion/: apps.py  bench.py
django_components/: __init__.py  app_settings.py  apps.py  attributes.py  autodiscovery.py  component.py  component_media.py  component_registry.py  dependencies.py  finders.py  library.py  node.py  slots.py  tag_formatter.py  template.py  template_loader.py  types.py
django_components/compat/: django.py
django_components/perfutil/: component.py
django_components/templatetags/: component_tags.py
django_components/util/: command.py  context.py  django_monkeypatch.py  loader.py  logger.py  misc.py  routing.py  tag_parser.py  template_parser.py  template_tag.py  testing.py  weakref.py
django_components_lite/: __init__.py  app_settings.py  apps.py  attributes.py  autodiscovery.py  component.py  component_media.py  component_registry.py  constants.py  context.py  dependencies.py  finders.py  library.py  node.py  slots.py  template.py  template_loader.py  testing.py
django_components_lite/templatetags/: component_tags.py
django_components_lite/util/: cache.py  context.py  django_monkeypatch.py  exception.py  loader.py  logger.py  misc.py  tag_parser.py  template_parser.py  template_tag.py  testing.py  types.py  weakref.py
docs/: index.md  migrating_from_safer_staticfiles.md
docs/benchmarks/: index.json  info.json  regressions.xml
docs/community/: development.md  people.yml
docs/examples/: .nav.yml  index.md
docs/getting-started/: installation.md  quickstart.md
docs/getting_started/: .nav.yml  adding_js_and_css.md  adding_slots.md  components_in_templates.md  installation.md  parametrising_components.md  rendering_components.md  your_first_component.md
docs/overview/: compatibility.md  performance.md  security_notes.md  welcome.md
docs/reference/: .nav.yml  api.md  changelog.md  commands.md  exceptions.md  extension_commands.md  extension_hooks.md  extension_urls.md  settings.md  template_tags.md  template_variables.md  testing_api.md  urls.md
docs/scripts/: extensions.py  mkdocs_util.py  people.py  reference.py
docs/templates/: reference_extension_commands.md  reference_extension_hooks.md  reference_extension_urls.md  reference_settings.md
docs/upgrading/: v0.md
docs/user-guide/: components.md  settings.md  slots.md
examples/simple/: README.md  pyproject.toml
main/: 404.html  index.html  sitemap.xml
main/search/: search_index.json
sampleproject/examples/: urls.py  utils.py  views.py
sampleproject/sampleproject/: settings.py
scripts/: supported_versions.py  validate_links.py
src/django_components/: __init__.py  app_settings.py  apps.py  component.py  component_media.py  component_registry.py  component_render.py  dependencies.py  provide.py  slots.py  template.py  urls.py
src/django_components_js/: README.md  build.py
tests/: conftest.py  test_attributes.py  test_autodiscover.py  test_benchmark_django.py  test_benchmark_django_small.py  test_benchmark_djc.py  test_benchmark_djc_small.py  test_command_ext.py  test_command_list.py  test_component.py  test_context.py  test_extension.py  test_finders.py  test_html_parser.py  test_integration_template_partials.py  test_loader.py  test_node.py  test_registry.py  test_settings.py  test_signals.py  test_slots.py  test_tag_parser.py  test_template.py  test_template_parser.py  test_templatetags.py  test_templatetags_component.py  test_templatetags_extends.py  test_templatetags_provide.py  test_templatetags_slot_fill.py  test_utils.py  testutils.py
tests/__snapshots__/: test_benchmark_djc.ambr
tests/components/: single_file.py  urls.py
tests/e2e/: utils.py
tests/static_root/: staticfiles.json
tests/templates/: component_inside_include_sub.html  inject.html  integration_template_partials.html  mdn_complete_page.html
(+218 files in other folders)
